# FTCall_Me_Maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/output/: result.json
src/: colors.py  constrained_greedy.py  func.py  main.py  parser.py
