[project]
name = "call-my-maybe"
version = "0.1.0"
description = "LLM Function Calling with Constrained Decoding"
authors = [
    {name = "okruhlia", email = "okruhlia@student.42warsaw.pl"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"

dependencies = [
    "alive-progress>=3.3.0",
    "pydantic>=2.0.0",
    "llm-sdk"
]

[tool.poetry.dependencies]
llm-sdk = { path = "./llm_sdk", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
start = "main:main"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1"
]
