[project]
name = "call-my-maybe"
version = "0.1.0"
description = "LLM Function Calling for 42 Project"
authors = [{name = "okruhlia", email = "okruhlia@student.42warsaw.pl"}]
requires-python = ">=3.12"

dependencies = [
    "alive-progress>=3.3.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1"
]