[project]
name = "src"
version = "0.1.0"
package-mode = false
description = "LLM Function Calling with Constrained Decoding"
authors = [
    {name = "okruhlia", email = "okruhlia@student.42warsaw.pl"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"

dependencies = [
    "alive-progress>=3.3.0",
    "pydantic>=2.0.0",
]

[tool.poetry.dependencies]
llm-sdk = { path = "./llm_sdk", develop = true }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1"
]
